// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeWidgetCard to match snapshot active 1`] = `
<body>
  <div>
    <a
      class="home-widget-card "
      href=""
    >
      <div
        class="widget-icon"
      >
        <img
          alt="Plan"
          class=""
        />
      </div>
      <div
        class="widget-content"
      >
        <div
          class="widget-label"
        >
          Plan
        </div>
        <div
          class="widget-count"
        >
          270
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`HomeWidgetCard to match snapshot disabled 1`] = `
<body>
  <div>
    <a
      class="home-widget-card disabled"
      href=""
    >
      <div
        class="widget-icon"
      >
        <img
          alt="Plan"
          class=""
        />
      </div>
      <div
        class="widget-content"
      >
        <div
          class="widget-label"
        >
          Plan
        </div>
        <div
          class="widget-count"
        >
          270
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`HomeWidgetCard to match snapshot loading 1`] = `
<body>
  <div>
    <a
      class="home-widget-card "
      href=""
    >
      <div
        class="widget-icon"
      >
        <img
          alt="Plan"
          class=""
        />
      </div>
      <div
        class="widget-content"
      >
        <div
          class="widget-label"
        >
          Plan
        </div>
        <div
          class="spinner-row d-flex align-items-center"
        >
          <div
            class="spinner-border spinner-border-sm"
            role="status"
          >
            <span
              class="sr-only"
            >
              Loading...
            </span>
          </div>
            
          Loading
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`HomeWidgetCard to match snapshot no count 1`] = `
<body>
  <div>
    <a
      class="home-widget-card "
      href=""
    >
      <div
        class="widget-icon"
      >
        <img
          alt="Plan"
          class=""
        />
      </div>
      <div
        class="widget-content"
      >
        <div
          class="widget-label"
        >
          Plan
        </div>
        <div
          class="widget-count"
        />
      </div>
      <button
        class="add-icon"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
          data-icon="plus-square"
          data-prefix="fal"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 64c8.8 0 16 7.2 16 16v352c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h352m0-32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-60 206h-98v-98c0-6.6-5.4-12-12-12h-12c-6.6 0-12 5.4-12 12v98h-98c-6.6 0-12 5.4-12 12v12c0 6.6 5.4 12 12 12h98v98c0 6.6 5.4 12 12 12h12c6.6 0 12-5.4 12-12v-98h98c6.6 0 12-5.4 12-12v-12c0-6.6-5.4-12-12-12z"
            fill="currentColor"
          />
        </svg>
      </button>
    </a>
  </div>
</body>
`;

exports[`HomeWidgetCard to match snapshot showAdd 1`] = `
<body>
  <div>
    <a
      class="home-widget-card "
      href=""
    >
      <div
        class="widget-icon"
      >
        <img
          alt="Plan"
          class=""
        />
      </div>
      <div
        class="widget-content"
      >
        <div
          class="widget-label"
        >
          Plan
        </div>
        <div
          class="widget-count"
        >
          270
        </div>
      </div>
      <button
        class="add-icon"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
          data-icon="plus-square"
          data-prefix="fal"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 64c8.8 0 16 7.2 16 16v352c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h352m0-32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-60 206h-98v-98c0-6.6-5.4-12-12-12h-12c-6.6 0-12 5.4-12 12v98h-98c-6.6 0-12 5.4-12 12v12c0 6.6 5.4 12 12 12h98v98c0 6.6 5.4 12 12 12h12c6.6 0 12-5.4 12-12v-98h98c6.6 0 12-5.4 12-12v-12c0-6.6-5.4-12-12-12z"
            fill="currentColor"
          />
        </svg>
      </button>
    </a>
  </div>
</body>
`;
